# statsadder-adw

./: README.md  com.statsadder.adw.json  meson.build
data/: com.statsadder.adw.appdata.xml.in  com.statsadder.adw.desktop.in  com.statsadder.adw.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  statsadder_adw-application.c  statsadder_adw-application.h  statsadder_adw-window.c  statsadder_adw-window.h  statsadder_adw-window.ui  statsadder_adw.gresource.xml
